# oplaydo2_pi

./: CMakeLists.txt  Plugin.cmake  oplaydo1.fbp  oplaydo2_pi.fbp
cmake/: AndroidLibs.cmake  PluginLibs.cmake  TemplateVersion
libs/AndroidHeaders/: CMakeLists.txt
libs/AndroidHeaders/GL/: gl.h
libs/plugingl/: CMakeLists.txt
libs/plugingl/include/: pidc.h
libs/plugingl/src/: ODdc.cpp  pidc.cpp
po/: POTFILES.in
src/: NavFunc.cpp  NavFunc.h  ODShaders.h  ODUtils.cpp  ODdc.cpp  ODdc.h  icons.cpp  icons.h  ocpn_plugin.h  ocpndc.cpp  oplaydo1_pi.cpp  oplaydo1_pi.h  oplaydo1gui.cpp  oplaydo1gui.h  oplaydo1gui_impl.cpp  oplaydo1gui_impl.h  oplaydo2_pi.cpp  oplaydo2_pi.h  oplaydo2gui.cpp  oplaydo2gui.h  oplaydo2gui_impl.cpp  oplaydo2gui_impl.h  piOverlayFactory.cpp  piOverlayFactory.h  pi_OverlayFactory.cpp  pi_OverlayFactory.h  pi_TexFont.cpp  pi_ocpndc.cpp  pi_ocpndc.h  pidc.cpp
src/extinclude/GLES2/: gl2.h
src/plugingl/: pidc.cpp
